--- a/springboot-mall/pom.xml
+++ b/springboot-mall/pom.xml
@@ -73,6 +73,7 @@
 		</dependency>
 
 
+		<!-- 包含常用的测试库，如 JUnit, Mockito, Spring Test 等 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -84,6 +85,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 	</dependencies>
 
 	<build>
